--- a/tutorials_blogs/perl6/exceptions/README
+++ b/tutorials_blogs/perl6/exceptions/README
@@ -112,7 +112,6 @@ CATCH blocks {#{{{
 
 
 
-
     CATCH is no longer an answer to a try block -- it's not a rewrite of p5's 
     Try::Tiny et al.
     
@@ -156,6 +155,21 @@ CATCH blocks {#{{{
         Output:
             We got an IO exception.
             back to main
+
+
+    
+    If you're using a poorly-documented module and are not sure exactly what 
+    exception you're getting back, the default ($_) variable inside the CATCH 
+    block is the exception itself, so you can just print out its WHO:
+            {
+                $obj.call_that_produces_unknown_exception();
+                CATCH {
+                    .WHO.say;
+                }
+            }
+
+
+
 
 
     X::AdHoc
